# forecasting-project-strum

./: .gitignore  Makefile  README.md  automl.py  pyproject.toml  requirements.txt  run_best_ensemble.py  run_final_forecast.py  run_sequential_cv.py  streamlit_app.py  work_till_now.md
.github/workflows/: ci.yml  monthly_forecast.yml
.streamlit/: config.toml
app/: streamlit_app.py
app/lib/: charts.py  load.py
app/pages/: 1_Overview.py  2_Drilldown.py  3_AutoML.py  4_Run_log.py
configs/: _schema.py  config_builder.py  fontana_candle.yaml
data/raw/: processed_data_filtered.csv  variants_export.csv
docs/: ONBOARDING.md  architecture.md  data_schema.md  fontana_candle_forecasting_runbook.md  forecasting_day7.pptx  hierarchy.md  modeling_decisions.md
docs/reports/: EXPERIMENTS_AND_DOCUMENTATION.md  architecture_v2_plan.md  day3_build_status.md  full_experiment_report.md  (+1 more)
notebooks/: configure_and_run.py
outputs/: FULL_RESULTS_REPORT.md  WHAT_I_DID.md  cv_summary.parquet  cv_summary_v2.parquet  forecast_report.md  manifest.json  non_forecastable_skus.csv
runs/: index.json
strum_results/: non_forecastable_ids.txt
tests/: test_baseline.py  test_classical.py  test_cluster_features.py  test_config_schema.py  test_densify.py  test_features.py  test_forecast.py  test_foundation.py  test_hierarchy.py  test_hierarchy_features.py  test_intermittent.py  test_io.py  test_lifecycle.py  test_metrics.py  test_ml_global.py  test_model_base.py  test_reconcile.py  test_report.py  test_scaffold.py  test_segment.py  test_selection.py  test_tweedie.py  test_validate.py
(+63 files in other folders)
